<resources>
  <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
    est laborum.
  </string>
  <string name="app_name">BookTera</string>
  <string name="action_login">Bejelentkezés</string>
  <string name="action_search">Keresés</string>
  <string name="action_cart">Vásárlás</string>
  <string name="action_categories">Kategóriák</string>
  <string name="action_logout">Kijelentkezés</string>
  <string name="action_register">Regisztráció</string>
  <string name="action_profile">Profilom</string>
  <string name="action_sell">Eladás</string>
  <string name="main_header_highlighteds">Kiemeltek</string>
  <string name="main_header_newests">Legújabbak</string>
  <string name="main_header_introduction">Mi is ez?</string>
  <string name="lightning">↯</string>
  <string name="bookBlockCtx_gotoUsersProducts_Format">\"%s\" könyvei</string>
  <string name="bookBlockCtx_gotoProductGroup_Format">\"%s\" könyvek</string>
  <string name="bookBlockCtx_addToCart">Kosárba!</string>
  <string name="bookBlockCtx_addToExchangeCart">Csere-kosárba!</string>
  <string name="bookBlockCtx_removeFromCart">Kivétel a kosárból</string>
  <string name="bookBlockCtx_changeQuantityInCart">Mennyiség módosítása</string>
  <string name="bookBlockCtx_changeQuantityInExchangeCart">Csere-mennyiség módosítása</string>
  <string name="bookBlockCtx_removeFromExchangeCart">Kivétel a csere-kosárból</string>
  <string name="title_activity_search">Keresés</string>
  <string name="search_">Keresés…</string>
  <string name="_no_results_">(Nincs találat)</string>
  <string name="category_header_subcategories">Alkategóriák</string>
  <string name="category_header_books">Könyvek</string>
  <string name="_choose_a_category_">(Válassz egy kategóriát)</string>
  <string name="_someones_books">&#160;könyvei</string>
  <string name="productGroupDetails_header_details">Részletek</string>
  <string name="productGroupDetails_header_books">Könyvek</string>
  <string name="productGroupDetails_header_statistics">Adatok</string>
  <string name="title_activity_productGroupDetails_Format">%s - Könyvek</string>
  <string name="productGroupDetails_statistics_publisher">Kiadó:</string>
  <string name="productGroupDetails_statistics_authors">Szerző(k):</string>
  <string name="productGroupDetails_statistics_category">Kategória:</string>
  <string name="productGroupDetails_statistics_numOfActiveBooks">Aktív könyvek a csoportban:</string>
  <string name="productGroupDetails_statistics_numOfPassiveBooks">Elfogyott könyvek a csoportban:</string>
  <string name="productGroupDetails_statistics_numOfFinishedTransactions">Befejezett vásárlások száma a csoportban:
  </string>
  <string name="login_userName_label">Felhasználó név:</string>
  <string name="register_userName_label">Felhasználó név:</string>
  <string name="login_password_label">Jelszó:</string>
  <string name="register_password_label">Jelszó:</string>
  <string name="login_loginBtn">Bejelentkezés</string>
  <string name="login_registerBtn">Regisztráció</string>
  <string name="register_registerBtn">Regisztráció</string>
  <string name="title_activity_login">Bejelentkezés</string>
  <string name="Error_">Hiba!</string>
  <string name="UserName_and_or_password_mustn_t_be_empty">Felhasználó név és/vagy jelszó nem lehet üres.</string>
  <string name="Successful_login">Sikeres bejelentkezés</string>
  <string name="Wrong_userName_and_or_password">Hibás felhasználó név és/vagy jelszó</string>
  <string name="Successfully_logged_out_">Sikeresen kijelentkeztél.</string>
  <string name="register_email_label">E-mail cím:</string>
  <string name="register_confirmPassword_label">Jelszó újra:</string>
  <string name="title_activity_register">Regisztráció</string>
  <string name="None_of_the_input_fields_may_be_empty">Egyik beviteli mező sem lehet üres.</string>
  <string name="The_password_and_the_confirm_password_aren_t_equal">A jelszó és az ellenőrző jelszó nem egyeznek meg.
  </string>
  <string name="Unsuccessful_registration_error_msg">A regisztráció nem sikerült. Ellenőrizd, hogy érvényes e-mail címet
    adtál-e meg, esetleg próbálkozz más felhasználó névvel.
  </string>
  <string name="Successful_registration">Sikeres regisztráció!</string>
  <string name="The_system_will_now_automatically_log_you_in">A rendszer most automatikusan be fog léptetni.</string>
  <string name="profile_fullName_label">Teljes név:</string>
  <string name="profile_email_label">E-mail cím:</string>
  <string name="profile_phoneNumber_label">Telefon szám:</string>
  <string name="profile_editBtn">Szerkesztés</string>
  <string name="title_activity_profile">Profilom</string>
  <string name="profileEdit_saveBtn">Változások mentése</string>
  <string name="profileEdit_phoneNumber">Telefonszám:</string>
  <string name="profileEdit_email">E-mail cím:</string>
  <string name="profileEdit_fullName">Teljes név:</string>
  <string name="title_activity_profileEdit">Adataim szerkesztése</string>
  <string name="Profile_modified_successfully">Sikeres adatmódosítás!</string>
  <string name="profileEdit_save_failureErrorMessage">Nem sikerült módosítani az adataid. Ellenőrizd, hogy érvényes
    e-mail címet/telefon számot adtál-e meg. Ha így van, valószínűleg már foglalt az általad választott e-mail cím.
  </string>
  <string name="userOrder_sumAmount">A rendelés összege:&#160;</string>
  <string name="userOrder_sumCustomerFee_format">Ebből jutalék: %s</string>
  <string name="userOrder_customersFeePercent_format" formatted="false">&#160;(%s%%)</string>
  <string name="userOrder_status">A rendelés állapota:&#160;</string>
  <string name="userOrder_books_mainLabel">
    <u>A KOSÁR TARTALMA</u>
  </string>
  <string name="userOrder_exchangeBooks_mainLabel">
    <u>A CSERE-KOSÁR</u>
  </string>
  <string name="Your_feedback_">A Te értékelésed:&#160;</string>
  <string name="The_vendors_feedback_">Az eladó értékelése:&#160;</string>
  <string name="The_customers_feedback_">A vevő értékelése:&#160;</string>
  <string name="buy_header_carts">Kosaraim</string>
  <string name="buy_header_in_progress">Megrendeltek</string>
  <string name="buy_header_finished">Korábbiak</string>
  <string name="sell_header_in_others_cart">Más kosarában</string>
  <string name="sell_header_in_progress">Folyamatban</string>
  <string name="sell_header_finished">Befejezett</string>
  <string name="title_activity_buys">Vásárlás</string>
  <string name="title_activity_sells">Eladás</string>
  <string name="userOrderCtx_usersProducts_format">\"%s\" könyvei</string>
  <string name="userOrderCtx_removeThisCart_format">\"%s\" kosár törlése</string>
  <string name="userOrderCtx_removeAllCarts">Minden kosár törlése</string>
  <string name="userOrderCtx_sendOrder_format">\"%s\" rendelés leadása</string>
  <string name="userOrderCtx_addExchangeProduct">Csere-könyv hozzáadása</string>
  <string name="userOrderCtx_removeExchangeCart">Csere-kosár törlése</string>
  <string name="userOrderCtx_sendExchangeOffer">Csere-ajánlat elküldése</string>
  <string name="userOrderCtx_finalizeOrder_WithoutExchange">Nem cserélek, fizessen!</string>
  <string name="userOrderCtx_finalizeOrder_AcceptExchange">Csere ajánlat elfogadása</string>
  <string name="userOrderCtx_finalizeOrder_DenyExchange">Csere ajánlat elutasítása</string>
  <string name="userOrderCtx_closeOrder_Successful">Tranzakció lezárása: Sikeres</string>
  <string name="userOrderCtx_closeOrder_Unsuccessful">Tranzakció lezárása: Sikertelen</string>
  <string name="removeThisCart_alertMsgFormat">Biztos, hogy törölni szeretnéd ezt a kosarat? (%s)</string>
  <string name="remove_alertMsgTitle">Törlés megerősítése</string>
  <string name="removeThisCart_successMsg">Kosár törölve!</string>
  <string name="removeThisCart_failureMsg">Nem sikerült törölni a kosarad!</string>
  <string name="ok">OK</string>
  <string name="no">Mégse</string>
  <string name="yes">OK</string>
  <string name="removeAllCarts_alertMsgFormat">Biztos, hogy törölni szeretnéd MINDEN kosarad?</string>
  <string name="removeAllCarts_successMsg">Minden kosarad törölve!</string>
  <string name="removeAllCarts_failureMsg">Nem sikerült törölni a kosaraid!</string>
  <string name="Confirm">Megerősítés</string>
  <string name="sendOrder_alertMsgFormat">Biztos, hogy meg szeretnéd rendelni ennek a kosarnák (%s) a tartalmát?
  </string>
  <string name="sendOrder_succesMsgFormat">Megrendelés feladva! (lásd: \"%s\" fül)</string>
  <string name="sendOrder_failureMsg">Nem sikerült feladni a rendelésed!</string>
  <string name="removeExchangeCart_alertMsgFormat">Biztos, hogy törölni szeretnéd ezt a csere-kosarat? (%s)</string>
  <string name="removeExchangeCart_failureMsg">Nem sikerült kiüríteni a csere-kosarad!</string>
  <string name="removeExchangeCart_successMsg">Csere-kosár kiürítve!</string>
  <string name="sendExchangeOffer_alertMsgFormat">Biztos el szeretnéd küldeni ezt a csere-ajánlatot \"%s\"
    felhasználónak?
  </string>
  <string name="sendExchangeOffer_successMsg">Csere ajánlat elküldve!</string>
  <string name="sendExchangeOffer_failureMsg">Nem sikerült elküldeni a csere-ajánlatod.</string>
  <string name="finalizeOrder_WithoutExchange_alertMsgFormat">Biztos, hogy csere nélkül szeretnéd véglegesíteni \"%s\"
    felhasználóval folytatott tranzakciód?
  </string>
  <string name="finalizeOrder_WithoutExchange_successMsg">A tranzakció csere nélkül véglegesítve!</string>
  <string name="finalizeOrder_WithoutExchange_failureMsg">Nem sikerült a tranzakció (csere nélküli) véglegesítése.
  </string>
  <string name="finalizeOrder_AcceptExchange_alertMsgFormat">Biztos elfogadod \"%s\" felhasználó csere ajánlatát?
  </string>
  <string name="finalizeOrder_AcceptExchange_successMsg">A tranzakció cserével véglegesítve!</string>
  <string name="finalizeOrder_AcceptExchange_failureMsg">Nem sikerült a tranzakció (cserével történő) véglegesítése.
  </string>
  <string name="finalizeOrder_DenyExchange_alertMsgFormat">Biztos elutasítod \"%s\" felhasználó csere ajánlatát?
  </string>
  <string name="finalizeOrder_DenyExchange_successMsg">A tranzakció csere nélkül véglegesítve!</string>
  <string name="finalizeOrder_DenyExchange_failureMsg">Nem sikerült a tranzakció (csere nélküli) véglegesítése.</string>
  <string name="closeOrder_Successful_successMsg">Tranzakció sikeres-ként lezárva!</string>
  <string name="closeOrder_Successful_successMsgFormat">Tranzakció sikeres-ként lezárva! (lásd: \"%s\" fül)</string>
  <string name="closeOrder_Successful_alertMsgFormat">Biztos, hogy sikeres volt a(z) %s felhasználóval folytatott
    tranzakciód?
  </string>
  <string name="closeOrder_Successful_failureMsg">Nem sikerült sikeres-ként lezárni a tranzakciót!</string>
  <string name="closeOrder_UnSuccessful_successMsg">Tranzakció SIKERTELEN-ként lezárva!</string>
  <string name="closeOrder_UnSuccessful_successMsgFormat">Tranzakció SIKERTELEN-ként lezárva! (lásd: \"%s\" fül)
  </string>
  <string name="closeOrder_UnSuccessful_alertMsgFormat">Biztos, hogy SIKERTELEN volt a(z) %s felhasználóval folytatott
    tranzakciód?
  </string>
  <string name="closeOrder_UnSuccessful_failureMsg">Nem sikerült SIKERTELEN-ként lezárni a tranzakciót!</string>
  <string name="addToCart_successMsg">Könyv a kosárban!</string>
  <string name="addToCart_failureMsg_electronicBook">Elektronikus könyvből csak 1db-ot rendelhetsz.</string>
  <string name="addToCart_failureMsg_general">Sajnos nem sikerült kosárba tenned a könyvet. Valószínűleg valaki
    időközben elvitte előled.
  </string>
  <string name="addToExchangeCart_successMsg">Könyv a csere-kosárban!</string>
</resources>