<menu xmlns:a="http://schemas.android.com/apk/res/android"
    >
  <item
      a:id="@+id/userOrderCtx_gotoUsersProducts"
      a:title="@string/userOrderCtx_usersProducts_format"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/userOrderCtx_removeThisCart"
      a:title="@string/userOrderCtx_removeThisCart_format"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/userOrderCtx_removeAllCarts"
      a:title="@string/userOrderCtx_removeAllCarts"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/userOrderCtx_sendOrder"
      a:title="@string/userOrderCtx_sendOrder_format"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/userOrderCtx_addExchangeProduct"
      a:title="@string/userOrderCtx_addExchangeProduct"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/userOrderCtx_removeExchangeCart"
      a:title="@string/userOrderCtx_removeExchangeCart"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/userOrderCtx_sendExchangeOffer"
      a:title="@string/userOrderCtx_sendExchangeOffer"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/userOrderCtx_finalizeOrder_WithoutExchange"
      a:title="@string/userOrderCtx_finalizeOrder_WithoutExchange"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/userOrderCtx_finalizeOrder_AcceptExchange"
      a:title="@string/userOrderCtx_finalizeOrder_AcceptExchange"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/userOrderCtx_finalizeOrder_DenyExchange"
      a:title="@string/userOrderCtx_finalizeOrder_DenyExchange"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/userOrderCtx_closeOrder_Successful"
      a:title="@string/userOrderCtx_closeOrder_Successful"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/userOrderCtx_closeOrder_Unsuccessful"
      a:title="@string/userOrderCtx_closeOrder_Unsuccessful"
      a:visible="false"
      a:enabled="false"
      />
</menu>
