<menu xmlns:a="http://schemas.android.com/apk/res/android"
    >
  <item
      a:id="@+id/bookBlockCtx_gotoUsersProducts"
      a:title="@string/bookBlockCtx_gotoUsersProducts_Format"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/bookBlockCtx_gotoProductGroup"
      a:title="@string/bookBlockCtx_gotoProductGroup_Format"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/bookBlockCtx_addToCart"
      a:title="@string/bookBlockCtx_addToCart"
      a:icon="@drawable/cart"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/bookBlockCtx_addToExchangeCart"
      a:title="@string/bookBlockCtx_addToExchangeCart"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/bookBlockCtx_removeFromCart"
      a:title="@string/bookBlockCtx_removeFromCart"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/bookBlockCtx_changeQuantityInCart"
      a:title="@string/bookBlockCtx_changeQuantityInCart"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/bookBlockCtx_changeQuantityInExchangeCart"
      a:title="@string/bookBlockCtx_changeQuantityInExchangeCart"
      a:visible="false"
      a:enabled="false"
      />
  <item
      a:id="@+id/bookBlockCtx_removeFromExchangeCart"
      a:title="@string/bookBlockCtx_removeFromExchangeCart"
      a:visible="false"
      a:enabled="false"
      />
</menu>
