<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileEdit_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_gravity="fill"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileEdit_fullName"
        android:textSize="19sp"
        android:layout_marginTop="26dp"
        android:textColor="@color/TextColor_Main"
        />
    <EditText
        android:id="@+id/profileEdit_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileEdit_email"
        android:textSize="19sp"
        android:layout_marginTop="26dp"
        android:textColor="@color/TextColor_Main"
        />
    <EditText
        android:id="@+id/profileEdit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileEdit_phoneNumber"
        android:textSize="19sp"
        android:layout_marginTop="26dp"
        android:textColor="@color/TextColor_Main"
        />
    <EditText
        android:id="@+id/profileEdit_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|phone"
        />

    <Button
        android:id="@+id/profileEdit_saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profileEdit_saveBtn"
        android:layout_marginTop="26dp"
        />
  </LinearLayout>
</ScrollView>