<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >
  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:stretchColumns="1"
      >
    <!-- Row 0 -->
    <TableRow android:layout_marginTop="26dp">
      <!-- Column 0 -->
      <TextView
          android:layout_weight="1"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:textSize="19sp"
          android:textColor="@color/TextColor_Main"
          android:text="@string/login_userName_label"
          android:gravity="end"
          />
      <!-- Column 1 -->
      <EditText
          android:id="@+id/login_userName_value"
          android:layout_weight="1"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:inputType="text"
          />
    </TableRow>
    <!-- Row 1 -->
    <TableRow android:layout_marginTop="26dp">
      <!-- Column 0 -->
      <TextView
          android:layout_weight="1"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:textSize="19sp"
          android:textColor="@color/TextColor_Main"
          android:text="@string/login_password_label"
          android:gravity="end"
          />
      <!-- Column 1 -->
      <EditText
          android:id="@+id/login_password_value"
          android:layout_weight="1"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          />
    </TableRow>
    <!-- Row 2 -->
    <TableRow android:layout_marginTop="26dp">
      <!-- Column 0 -->
      <Button
          android:id="@+id/login_loginBtn"
          android:layout_weight="1"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:text="@string/login_loginBtn"
          />
      <!-- Column 1 -->
      <Button
          android:id="@+id/login_registerBtn"
          android:layout_weight="1"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:text="@string/login_registerBtn"
          />
    </TableRow>
  </TableLayout>
</ScrollView>