<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    >
  <LinearLayout
      android:id="@+id/fragmentContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <TextView
        android:id="@+id/productGroupDetails_statistics_publisher_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/TextColor_Lighter"
        android:text="@string/productGroupDetails_statistics_publisher"
        />
    <TextView
        android:id="@+id/productGroupDetails_statistics_publisher_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/TextColor_Main"
        tools:text="Ulpius"
        />

    <TextView
        android:id="@+id/productGroupDetails_statistics_authors_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/TextColor_Lighter"
        android:text="@string/productGroupDetails_statistics_authors"
        />
    <TextView
        android:id="@+id/productGroupDetails_statistics_authors_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/TextColor_Main"
        tools:text="Fábián Janka"
        />

    <TextView
        android:id="@+id/productGroupDetails_statistics_category_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/TextColor_Lighter"
        android:text="@string/productGroupDetails_statistics_category"
        />
    <TextView
        android:id="@+id/productGroupDetails_statistics_category_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/TextColor_Main"
        tools:text="Regény - Családregény"
        />

    <TextView
        android:id="@+id/productGroupDetails_statistics_numOfActiveBooks_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/TextColor_Lighter"
        android:text="@string/productGroupDetails_statistics_numOfActiveBooks"
        />
    <TextView
        android:id="@+id/productGroupDetails_statistics_numOfActiveBooks_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/TextColor_Main"
        tools:text="3"
        />

    <TextView
        android:id="@+id/productGroupDetails_statistics_numOfPassiveBooks_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/TextColor_Lighter"
        android:text="@string/productGroupDetails_statistics_numOfPassiveBooks"
        />
    <TextView
        android:id="@+id/productGroupDetails_statistics_numOfPassiveBooks_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/TextColor_Main"
        tools:text="1"
        />

    <TextView
        android:id="@+id/productGroupDetails_statistics_numOfFinishedTransactions_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/TextColor_Lighter"
        android:text="@string/productGroupDetails_statistics_numOfFinishedTransactions"
        />
    <TextView
        android:id="@+id/productGroupDetails_statistics_numOfFinishedTransactions_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/TextColor_Main"
        tools:text="0"
        />
  </LinearLayout>
</ScrollView>