<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
  <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:columnCount="2" android:rowCount="1"
      >
    <LinearLayout
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:orientation="vertical"
        >
      <ImageView
          android:id="@+id/profile_userImage"
          android:layout_width="match_parent"
          android:layout_height="133dp"
          android:src="@drawable/no_image"
          android:scaleType="fitXY"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="21sp"
          android:textColor="@color/TextColor_Main"
          android:id="@+id/profile_userName"
          android:layout_gravity="center"
          tools:text="ZomiDudu"
          />
    </LinearLayout>
    <LinearLayout
        android:weightSum="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:orientation="vertical"
        android:layout_gravity="fill"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="13sp"
          android:textColor="@color/TextColor_Lighter"
          android:text="@string/profile_fullName_label"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="19sp"
          android:textColor="@color/TextColor_Main"
          android:id="@+id/profile_fullName"
          android:layout_marginBottom="6dp"
          tools:text="Long full name... Maybe also 3 names and so..."
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="13sp"
          android:textColor="@color/TextColor_Lighter"
          android:text="@string/profile_email_label"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="19sp"
          android:textColor="@color/TextColor_Main"
          android:id="@+id/profile_email"
          android:layout_marginBottom="6dp"
          tools:text="zomiDuduXyz@gmail.com"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="13sp"
          android:textColor="@color/TextColor_Lighter"
          android:text="@string/profile_phoneNumber_label"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="19sp"
          android:textColor="@color/TextColor_Main"
          android:id="@+id/profile_phoneNumber"
          android:layout_marginBottom="6dp"
          tools:text="06301234567"
          />
      <Button
          android:id="@+id/profile_editBtn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/profile_editBtn"
          android:layout_gravity="center"
          />


    </LinearLayout>
  </GridLayout>
</ScrollView>